HW5/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 3     statement -> LBRACE block RBRACE
Rule 4     block -> statement_list
Rule 5     statement_list -> statement statement_list
Rule 6     statement_list -> expression SEMICOLON
Rule 7     statement_list -> empty
Rule 8     statement -> WHILE LPAREN expression RPAREN LBRACE block RBRACE
Rule 9     statement -> VAR ASSIGN expression SEMICOLON
Rule 10    statement -> expression ASSIGN expression SEMICOLON
Rule 11    statement -> IF LPAREN expression RPAREN LBRACE block RBRACE ELSE LBRACE block RBRACE
Rule 12    statement -> IF LPAREN expression RPAREN LBRACE block RBRACE
Rule 13    expression -> expression ADD expression
Rule 14    expression -> expression SUB expression
Rule 15    expression -> expression MULT expression
Rule 16    expression -> expression DIV expression
Rule 17    expression -> expression MOD expression
Rule 18    expression -> expression EXP expression
Rule 19    expression -> expression FLRDIV expression
Rule 20    expression -> expression EQUAL expression
Rule 21    expression -> expression NEQUAL expression
Rule 22    expression -> expression LESS expression
Rule 23    expression -> expression MORE expression
Rule 24    expression -> expression LESSEQUAL expression
Rule 25    expression -> expression MOREEQUAL expression
Rule 26    expression -> expression IN expression
Rule 27    expression -> LPAREN expression RPAREN
Rule 28    expression -> NOT expression
Rule 29    expression -> expression AND expression
Rule 30    expression -> expression OR expression
Rule 31    expression -> expression LBRACK expression RBRACK
Rule 32    expression -> ADD expression
Rule 33    expression -> SUB expression
Rule 34    expression -> term
Rule 35    term -> INT
Rule 36    term -> REAL
Rule 37    term -> STRING
Rule 38    term -> var
Rule 39    term -> LBRACK RBRACK
Rule 40    term -> LBRACK expression RBRACK
Rule 41    term -> LBRACK head COMMA tail RBRACK
Rule 42    term -> LBRACK expression RBRACK LBRACK expression RBRACK
Rule 43    var -> VAR
Rule 44    head -> term
Rule 45    tail -> term COMMA tail
Rule 46    tail -> term
Rule 47    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 13 32
AND                  : 29
ASSIGN               : 9 10
COMMA                : 41 45
DIV                  : 16
ELSE                 : 11
EQUAL                : 20
EXP                  : 18
FLRDIV               : 19
IF                   : 11 12
IN                   : 26
INT                  : 35
LBRACE               : 3 8 11 11 12
LBRACK               : 31 39 40 41 42 42
LESS                 : 22
LESSEQUAL            : 24
LPAREN               : 2 8 11 12 27
MOD                  : 17
MORE                 : 23
MOREEQUAL            : 25
MULT                 : 15
NEQUAL               : 21
NOT                  : 28
OR                   : 30
PRINT                : 2
RBRACE               : 3 8 11 11 12
RBRACK               : 31 39 40 41 42 42
REAL                 : 36
RPAREN               : 2 8 11 12 27
SEMICOLON            : 2 6 9 10
STRING               : 37
SUB                  : 14 33
VAR                  : 9 43
WHILE                : 8
error                : 

Nonterminals, with rules where they appear

block                : 3 8 11 11 12
empty                : 7
expression           : 2 6 8 9 10 10 11 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 28 29 29 30 30 31 31 32 33 40 42 42
head                 : 41
program              : 0
statement            : 1 5
statement_list       : 4 5
tail                 : 41 45
term                 : 34 44 45 46
var                  : 38

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (3) statement -> . LBRACE block RBRACE
    (8) statement -> . WHILE LPAREN expression RPAREN LBRACE block RBRACE
    (9) statement -> . VAR ASSIGN expression SEMICOLON
    (10) statement -> . expression ASSIGN expression SEMICOLON
    (11) statement -> . IF LPAREN expression RPAREN LBRACE block RBRACE ELSE LBRACE block RBRACE
    (12) statement -> . IF LPAREN expression RPAREN LBRACE block RBRACE
    (13) expression -> . expression ADD expression
    (14) expression -> . expression SUB expression
    (15) expression -> . expression MULT expression
    (16) expression -> . expression DIV expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression EXP expression
    (19) expression -> . expression FLRDIV expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NEQUAL expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression LESSEQUAL expression
    (25) expression -> . expression MOREEQUAL expression
    (26) expression -> . expression IN expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NOT expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression LBRACK expression RBRACK
    (32) expression -> . ADD expression
    (33) expression -> . SUB expression
    (34) expression -> . term
    (35) term -> . INT
    (36) term -> . REAL
    (37) term -> . STRING
    (38) term -> . var
    (39) term -> . LBRACK RBRACK
    (40) term -> . LBRACK expression RBRACK
    (41) term -> . LBRACK head COMMA tail RBRACK
    (42) term -> . LBRACK expression RBRACK LBRACK expression RBRACK
    (43) var -> . VAR

    PRINT           shift and go to state 2
    LBRACE          shift and go to state 15
    WHILE           shift and go to state 13
    VAR             shift and go to state 6
    IF              shift and go to state 11
    LPAREN          shift and go to state 4
    NOT             shift and go to state 1
    ADD             shift and go to state 3
    SUB             shift and go to state 5
    INT             shift and go to state 10
    REAL            shift and go to state 16
    STRING          shift and go to state 7
    LBRACK          shift and go to state 12

    statement                      shift and go to state 18
    term                           shift and go to state 8
    var                            shift and go to state 9
    expression                     shift and go to state 17
    program                        shift and go to state 14

state 1

    (28) expression -> NOT . expression
    (13) expression -> . expression ADD expression
    (14) expression -> . expression SUB expression
    (15) expression -> . expression MULT expression
    (16) expression -> . expression DIV expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression EXP expression
    (19) expression -> . expression FLRDIV expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NEQUAL expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression LESSEQUAL expression
    (25) expression -> . expression MOREEQUAL expression
    (26) expression -> . expression IN expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NOT expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression LBRACK expression RBRACK
    (32) expression -> . ADD expression
    (33) expression -> . SUB expression
    (34) expression -> . term
    (35) term -> . INT
    (36) term -> . REAL
    (37) term -> . STRING
    (38) term -> . var
    (39) term -> . LBRACK RBRACK
    (40) term -> . LBRACK expression RBRACK
    (41) term -> . LBRACK head COMMA tail RBRACK
    (42) term -> . LBRACK expression RBRACK LBRACK expression RBRACK
    (43) var -> . VAR

    LPAREN          shift and go to state 4
    NOT             shift and go to state 1
    ADD             shift and go to state 3
    SUB             shift and go to state 5
    INT             shift and go to state 10
    REAL            shift and go to state 16
    STRING          shift and go to state 7
    LBRACK          shift and go to state 12
    VAR             shift and go to state 19

    expression                     shift and go to state 20
    var                            shift and go to state 9
    term                           shift and go to state 8

state 2

    (2) statement -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 21


state 3

    (32) expression -> ADD . expression
    (13) expression -> . expression ADD expression
    (14) expression -> . expression SUB expression
    (15) expression -> . expression MULT expression
    (16) expression -> . expression DIV expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression EXP expression
    (19) expression -> . expression FLRDIV expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NEQUAL expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression LESSEQUAL expression
    (25) expression -> . expression MOREEQUAL expression
    (26) expression -> . expression IN expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NOT expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression LBRACK expression RBRACK
    (32) expression -> . ADD expression
    (33) expression -> . SUB expression
    (34) expression -> . term
    (35) term -> . INT
    (36) term -> . REAL
    (37) term -> . STRING
    (38) term -> . var
    (39) term -> . LBRACK RBRACK
    (40) term -> . LBRACK expression RBRACK
    (41) term -> . LBRACK head COMMA tail RBRACK
    (42) term -> . LBRACK expression RBRACK LBRACK expression RBRACK
    (43) var -> . VAR

    LPAREN          shift and go to state 4
    NOT             shift and go to state 1
    ADD             shift and go to state 3
    SUB             shift and go to state 5
    INT             shift and go to state 10
    REAL            shift and go to state 16
    STRING          shift and go to state 7
    LBRACK          shift and go to state 12
    VAR             shift and go to state 19

    expression                     shift and go to state 22
    var                            shift and go to state 9
    term                           shift and go to state 8

state 4

    (27) expression -> LPAREN . expression RPAREN
    (13) expression -> . expression ADD expression
    (14) expression -> . expression SUB expression
    (15) expression -> . expression MULT expression
    (16) expression -> . expression DIV expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression EXP expression
    (19) expression -> . expression FLRDIV expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NEQUAL expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression LESSEQUAL expression
    (25) expression -> . expression MOREEQUAL expression
    (26) expression -> . expression IN expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NOT expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression LBRACK expression RBRACK
    (32) expression -> . ADD expression
    (33) expression -> . SUB expression
    (34) expression -> . term
    (35) term -> . INT
    (36) term -> . REAL
    (37) term -> . STRING
    (38) term -> . var
    (39) term -> . LBRACK RBRACK
    (40) term -> . LBRACK expression RBRACK
    (41) term -> . LBRACK head COMMA tail RBRACK
    (42) term -> . LBRACK expression RBRACK LBRACK expression RBRACK
    (43) var -> . VAR

    LPAREN          shift and go to state 4
    NOT             shift and go to state 1
    ADD             shift and go to state 3
    SUB             shift and go to state 5
    INT             shift and go to state 10
    REAL            shift and go to state 16
    STRING          shift and go to state 7
    LBRACK          shift and go to state 12
    VAR             shift and go to state 19

    expression                     shift and go to state 23
    var                            shift and go to state 9
    term                           shift and go to state 8

state 5

    (33) expression -> SUB . expression
    (13) expression -> . expression ADD expression
    (14) expression -> . expression SUB expression
    (15) expression -> . expression MULT expression
    (16) expression -> . expression DIV expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression EXP expression
    (19) expression -> . expression FLRDIV expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NEQUAL expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression LESSEQUAL expression
    (25) expression -> . expression MOREEQUAL expression
    (26) expression -> . expression IN expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NOT expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression LBRACK expression RBRACK
    (32) expression -> . ADD expression
    (33) expression -> . SUB expression
    (34) expression -> . term
    (35) term -> . INT
    (36) term -> . REAL
    (37) term -> . STRING
    (38) term -> . var
    (39) term -> . LBRACK RBRACK
    (40) term -> . LBRACK expression RBRACK
    (41) term -> . LBRACK head COMMA tail RBRACK
    (42) term -> . LBRACK expression RBRACK LBRACK expression RBRACK
    (43) var -> . VAR

    LPAREN          shift and go to state 4
    NOT             shift and go to state 1
    ADD             shift and go to state 3
    SUB             shift and go to state 5
    INT             shift and go to state 10
    REAL            shift and go to state 16
    STRING          shift and go to state 7
    LBRACK          shift and go to state 12
    VAR             shift and go to state 19

    expression                     shift and go to state 24
    var                            shift and go to state 9
    term                           shift and go to state 8

state 6

    (9) statement -> VAR . ASSIGN expression SEMICOLON
    (43) var -> VAR .

    SEMICOLON       reduce using rule 43 (var -> VAR .)
    ASSIGN          reduce using rule 43 (var -> VAR .)
    ADD             reduce using rule 43 (var -> VAR .)
    SUB             reduce using rule 43 (var -> VAR .)
    MULT            reduce using rule 43 (var -> VAR .)
    DIV             reduce using rule 43 (var -> VAR .)
    MOD             reduce using rule 43 (var -> VAR .)
    EXP             reduce using rule 43 (var -> VAR .)
    FLRDIV          reduce using rule 43 (var -> VAR .)
    EQUAL           reduce using rule 43 (var -> VAR .)
    NEQUAL          reduce using rule 43 (var -> VAR .)
    LESS            reduce using rule 43 (var -> VAR .)
    MORE            reduce using rule 43 (var -> VAR .)
    LESSEQUAL       reduce using rule 43 (var -> VAR .)
    MOREEQUAL       reduce using rule 43 (var -> VAR .)
    IN              reduce using rule 43 (var -> VAR .)
    AND             reduce using rule 43 (var -> VAR .)
    OR              reduce using rule 43 (var -> VAR .)
    LBRACK          reduce using rule 43 (var -> VAR .)

  ! ASSIGN          [ shift and go to state 25 ]


state 7

    (37) term -> STRING .

    ADD             reduce using rule 37 (term -> STRING .)
    SUB             reduce using rule 37 (term -> STRING .)
    MULT            reduce using rule 37 (term -> STRING .)
    DIV             reduce using rule 37 (term -> STRING .)
    MOD             reduce using rule 37 (term -> STRING .)
    EXP             reduce using rule 37 (term -> STRING .)
    FLRDIV          reduce using rule 37 (term -> STRING .)
    EQUAL           reduce using rule 37 (term -> STRING .)
    NEQUAL          reduce using rule 37 (term -> STRING .)
    LESS            reduce using rule 37 (term -> STRING .)
    MORE            reduce using rule 37 (term -> STRING .)
    LESSEQUAL       reduce using rule 37 (term -> STRING .)
    MOREEQUAL       reduce using rule 37 (term -> STRING .)
    IN              reduce using rule 37 (term -> STRING .)
    AND             reduce using rule 37 (term -> STRING .)
    OR              reduce using rule 37 (term -> STRING .)
    LBRACK          reduce using rule 37 (term -> STRING .)
    ASSIGN          reduce using rule 37 (term -> STRING .)
    RPAREN          reduce using rule 37 (term -> STRING .)
    RBRACK          reduce using rule 37 (term -> STRING .)
    SEMICOLON       reduce using rule 37 (term -> STRING .)
    COMMA           reduce using rule 37 (term -> STRING .)


state 8

    (34) expression -> term .

    RPAREN          reduce using rule 34 (expression -> term .)
    ADD             reduce using rule 34 (expression -> term .)
    SUB             reduce using rule 34 (expression -> term .)
    MULT            reduce using rule 34 (expression -> term .)
    DIV             reduce using rule 34 (expression -> term .)
    MOD             reduce using rule 34 (expression -> term .)
    EXP             reduce using rule 34 (expression -> term .)
    FLRDIV          reduce using rule 34 (expression -> term .)
    EQUAL           reduce using rule 34 (expression -> term .)
    NEQUAL          reduce using rule 34 (expression -> term .)
    LESS            reduce using rule 34 (expression -> term .)
    MORE            reduce using rule 34 (expression -> term .)
    LESSEQUAL       reduce using rule 34 (expression -> term .)
    MOREEQUAL       reduce using rule 34 (expression -> term .)
    IN              reduce using rule 34 (expression -> term .)
    AND             reduce using rule 34 (expression -> term .)
    OR              reduce using rule 34 (expression -> term .)
    LBRACK          reduce using rule 34 (expression -> term .)
    ASSIGN          reduce using rule 34 (expression -> term .)
    RBRACK          reduce using rule 34 (expression -> term .)
    SEMICOLON       reduce using rule 34 (expression -> term .)


state 9

    (38) term -> var .

    ADD             reduce using rule 38 (term -> var .)
    SUB             reduce using rule 38 (term -> var .)
    MULT            reduce using rule 38 (term -> var .)
    DIV             reduce using rule 38 (term -> var .)
    MOD             reduce using rule 38 (term -> var .)
    EXP             reduce using rule 38 (term -> var .)
    FLRDIV          reduce using rule 38 (term -> var .)
    EQUAL           reduce using rule 38 (term -> var .)
    NEQUAL          reduce using rule 38 (term -> var .)
    LESS            reduce using rule 38 (term -> var .)
    MORE            reduce using rule 38 (term -> var .)
    LESSEQUAL       reduce using rule 38 (term -> var .)
    MOREEQUAL       reduce using rule 38 (term -> var .)
    IN              reduce using rule 38 (term -> var .)
    AND             reduce using rule 38 (term -> var .)
    OR              reduce using rule 38 (term -> var .)
    LBRACK          reduce using rule 38 (term -> var .)
    ASSIGN          reduce using rule 38 (term -> var .)
    RPAREN          reduce using rule 38 (term -> var .)
    RBRACK          reduce using rule 38 (term -> var .)
    SEMICOLON       reduce using rule 38 (term -> var .)
    COMMA           reduce using rule 38 (term -> var .)


state 10

    (35) term -> INT .

    ADD             reduce using rule 35 (term -> INT .)
    SUB             reduce using rule 35 (term -> INT .)
    MULT            reduce using rule 35 (term -> INT .)
    DIV             reduce using rule 35 (term -> INT .)
    MOD             reduce using rule 35 (term -> INT .)
    EXP             reduce using rule 35 (term -> INT .)
    FLRDIV          reduce using rule 35 (term -> INT .)
    EQUAL           reduce using rule 35 (term -> INT .)
    NEQUAL          reduce using rule 35 (term -> INT .)
    LESS            reduce using rule 35 (term -> INT .)
    MORE            reduce using rule 35 (term -> INT .)
    LESSEQUAL       reduce using rule 35 (term -> INT .)
    MOREEQUAL       reduce using rule 35 (term -> INT .)
    IN              reduce using rule 35 (term -> INT .)
    AND             reduce using rule 35 (term -> INT .)
    OR              reduce using rule 35 (term -> INT .)
    LBRACK          reduce using rule 35 (term -> INT .)
    ASSIGN          reduce using rule 35 (term -> INT .)
    RPAREN          reduce using rule 35 (term -> INT .)
    RBRACK          reduce using rule 35 (term -> INT .)
    SEMICOLON       reduce using rule 35 (term -> INT .)
    COMMA           reduce using rule 35 (term -> INT .)


state 11

    (11) statement -> IF . LPAREN expression RPAREN LBRACE block RBRACE ELSE LBRACE block RBRACE
    (12) statement -> IF . LPAREN expression RPAREN LBRACE block RBRACE

    LPAREN          shift and go to state 26


state 12

    (39) term -> LBRACK . RBRACK
    (40) term -> LBRACK . expression RBRACK
    (41) term -> LBRACK . head COMMA tail RBRACK
    (42) term -> LBRACK . expression RBRACK LBRACK expression RBRACK
    (13) expression -> . expression ADD expression
    (14) expression -> . expression SUB expression
    (15) expression -> . expression MULT expression
    (16) expression -> . expression DIV expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression EXP expression
    (19) expression -> . expression FLRDIV expression
    (20) expression -> . expression EQUAL expression
    (21) expression -> . expression NEQUAL expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression LESSEQUAL expression
    (25) expression -> . expression MOREEQUAL expression
    (26) expression -> . expression IN expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NOT expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression OR expression
    (31) expression -> . expression LBRACK expression RBRACK
    (32) expression -> . ADD expression
    (33) expression -> . SUB expression
    (34) expression -> . term
    (44) head -> . term
    (35) term -> . INT
    (36) term -> . REAL
    (37) term -> . STRING
    (38) term -> . var
    (39) term -> . LBRACK RBRACK
    (40) term -> . LBRACK expression RBRACK
    (41) term -> . LBRACK head COMMA tail RBRACK
    (42) term -> . LBRACK expression RBRACK LBRACK expression RBRACK
    (43) var -> . VAR

    RBRACK          shift and go to state 27
    LPAREN          shift and go to state 4
    NOT             shift and go to state 1
    ADD             shift and go to state 3
    SUB             shift and go to state 5
    INT             shift and go to state 10
    REAL            shift and go to state 16
    STRING          shift and go to state 7
    LBRACK          shift and go to state 12
    VAR             shift and go to state 19
